add new method in emergency
